<resources>
    <string name="app_name">elo</string>
    <string name="constructor">constructor elo</string>
    <string name="name">название ЭлО</string>
    <string name="type_name">введите название</string>
    <string name="desc">описание</string>
    <string name="type_desc">введите описание</string>
    <string name="tags">задать теги (не более 3)</string>
    <string name="level">выбрать уровень</string>
    <string name="employees">доступные сотрудники</string>
    <string name="tasks">указать задачи</string>
    <string name="back">назад</string>
    <string name="tag">добавить тег</string>
    <string name="task">добавить задание</string>
    <string name="settings">настройки</string>
    <string name="search">поиск</string>
    <string name="home">главная</string>
    <string name="notifications">уведомления</string>
    <string name="profile">профиль</string>
    <string name="tag_name">введите тег</string>
    <string name="task_name">название задания</string>
    <string name="task_info">содержание задания</string>
    <string name="reset">сброс</string>
    <string name="tag_item">тэг</string>
    <string name="elo_name">eloName</string>
    <string name="elo_desc">описание</string>
    <string name="elo_desc_text">eloDescText</string>
    <string name="divider">divider</string>
    <string name="take_part">вступить</string>
    <string name="create_elo">создать эло</string>
    <string name="avatar">аватар</string>
    <string name="manager_elo">Управление ЭлО</string>
    <string name="in_progress">Текущие ЭлО</string>
    <string name="username">Mentor Name</string>
    <string name="worker_name">Worker Name</string>
    <string name="percents">0%</string>
    <string name="auth">authorization</string>
    <string name="name_register">Введите имя</string>
    <string name="surname_register">Введите фамилию</string>
    <string name="password">Введите пароль</string>
    <string name="password_reset">восстановить пароль</string>
    <string name="registration">registration</string>
    <string name="reset_page">восстановление пароля</string>
    <string name="reset_mail">Введите email, указанный при регистрации: </string>
    <string name="email_input">Введите email</string>
    <string name="menu">menu</string>
    <string name="popup1">Выйти из аккаунта</string>
    <string name="requests">заявки</string>
    <string name="progress">Ваш прогресс:</string>
    <string name="add_user">Одобрить заявку?</string>
    <string name="accept_task">Подтвердить выполнение?</string>
    <string name="tags_list">теги</string>
    <string name="employees_list">сотрудники</string>
    <string name="tasks_list">задачи</string>
    <string name="cancel">отмена</string>
    <string name="isPrivate">Все могут присоединиться?</string>
    <string name="junior">junior</string>
    <string name="middle">middle</string>
    <string name="senior">senior</string>
    <string name="login">войти</string>
    <string name="acc_swap">swap</string>
    <string name="to_admin">admin</string>
    <string name="admin_name">Admin Name</string>
    <string name="manage_users">Управление сотрудниками</string>
    <string name="users">staff</string>
    <string name="user_name">user name</string>
    <string name="user_level">user level</string>
    <string name="user_access_level">user access level</string>
    <string name="notification_theme">theme</string>
    <string name="notification_text">notification text</string>
    <string name="email">email:</string>
    <string name="pass">пароль:</string>
    <string name="enter_profile">войти в аккаунт</string>
    <string name="tags_change">управлять тегами</string>
    <string name="elo_created">созданные ЭлО</string>
    <string name="elo_part">участие в ЭлО</string>
    <string name="employee">сотрудник</string>
    <string name="mentor">наставник</string>
    <string name="name_change">введите имя</string>
    <string name="email_change">введите email</string>
    <string name="password_change">введите пароль</string>
    <string name="avatar_change">редактирование аватара</string>
    <string name="user_stack_level">изменить уровень</string>
    <string name="confirm_level_change">Подтвердить изменения?</string>
    <string name="elo_created_en">created elo</string>
    <string name="elo_part_en">participation in elo</string>
    <string name="delete">delete</string>
    <string name="clear_nf">Очистить уведомления</string>
    <string name="read_nf">Отметить прочитанными</string>
    <string name="nf_deadline">Уведомления о дедлайнах</string>
    <string name="nf_deadline_1h">за 1 час</string>
    <string name="nf_deadline_4h">за 4 часа</string>
    <string name="nf_deadline_8h">за 8 часов</string>
    <string name="nf_deadline_24h">за 24 часа</string>
    <string name="nf_deadline_off">выключены</string>
    <string name="nf_date">date</string>
    <string name="button">button</string>
    <string name="task_desc">задание:</string>
    <string name="url">url</string>
    <string name="tasks_text">tasks</string>
    <string name="requests_text">requests</string>
    <string name="link">ссылка</string>
    <string name="reports">reports</string>
    <string name="report_make">make a report</string>
    <string name="db_copy">copy database</string>
    <string name="r_users">users</string>
    <string name="r_elo">elo</string>
    <string name="r_tasks">tasks</string>
    <string name="elo_type">введите название ЭлО</string>
    <string name="all_lines">все записи</string>
    <string name="elo_owner">владелец ЭлО</string>
    <string name="elo_participants">участники ЭлО</string>
    <string name="elo_progress">прогресс</string>
    <string name="elo_sort1">название ЭлО</string>
    <string name="elo_sort2">имя юзера</string>
    <string name="elo_sort3">id задания</string>
    <string name="sort">сортировка</string>

    <string name="users_type">введите имя юзера</string>
    <string name="surname_type">введите фамилию юзера</string>

    <string name="tasks_type">введите ID задания</string>
    <string name="tasks_type_add">введите ID ЭлО</string>
    <string name="tasks_lines">все записи</string>
    <string name="tasks_owner">поиск ID ЭлО</string>
    <string name="tasks_participants">количество заданий в ЭлО</string>
    <string name="tasks_progress">прогресс юзеров в ЭлО</string>
    <string name="tasks_sort1">название ЭлО</string>
    <string name="tasks_sort2">имя юзера</string>
    <string name="tasks_sort3">id задания</string>
</resources>