<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login.levelDial"
    android:id="@+id/dial">


    <LinearLayout
        android:id="@+id/nf_deadline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/radio_1h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/nf_deadline_1h"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radio_4h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/nf_deadline_4h"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radio_8h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/nf_deadline_8h"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radio_24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/nf_deadline_24h"
                android:checked="true"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radio_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/nf_deadline_off"
                android:textSize="20sp"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>