<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/eloName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/elo_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eloDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_margin="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/elo_desc_text"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eloName" />


    <Button
        android:id="@+id/buttonTags"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tags_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eloDesc" />

    <Button
        android:id="@+id/buttonEmpl"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/employees_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTags" />

    <Button
        android:id="@+id/buttonTasks"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tasks_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEmpl" />

    <ImageButton
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/create_elo"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/confirm" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>